tests/scripts/test-package-default-import.hk.err
error: 3:1 - External package 'test_pkg_c::default' cannot be used in interpreter mode. Use the transpiler to convert to JavaScript for external package support.
use test_pkg_c::default;
^^^^^^^^^^^^^^^^^^^^^^^^
